fix buttons css

--- a/src/admin.html
+++ b/src/admin.html
@@ -36,7 +36,7 @@
 
         <div class="add-button">
             <a id="newbutton" href="createposition.html?new" target="_blank" id="newbutton" value=""
-                class="btn-apply btn btn-primary float-end">Add Position</a>
+                class="btn btn-apply float-end">Add Position</a>
         </div>
 
         <div class="input-group search-bar">
@@ -114,11 +114,11 @@
                         <span id="notes">None</span>
                     </div>
 
-                        <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn">See
+                        <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn submit-btn">See
                             Applicants</a>
                         <div class="mt-2 open-position-input-group input-group float-end">
-                            <a id="editbutton" href="" value="" class="input-group-btn btn">Edit Notes</a>
-                            <button id="closebutton" value="" class="input-group-btn btn">Close
+                            <a id="editbutton" href="" value="" class="input-group-btn btn submit-btn">Edit Notes</a>
+                            <button id="closebutton" value="" class="input-group-btn btn submit-btn">Close
                                 Position</button>
                         </div>    
 
