--- a/src/applicants.html
+++ b/src/applicants.html
@@ -32,6 +32,7 @@
 
 		.container{
 			box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+			background-color: white;
 		}
 
 		table.dataTable {
@@ -41,6 +42,20 @@
     max-width: none !important;
     /* border-collapse: separate !important; */
     border-spacing: 0;
+}
+.btn-apply{
+  background-color: #FFdd00;
+  border-color:#FFdd00;
+  color: #044c7c;
+  margin-right: 25px;
+  width: max-content;
+  font-weight: bolder;
+}
+
+.btn-apply:hover{
+  background-color: #044c7c;
+  color: #FFdd00;
+  box-shadow: 3px 3px 3px #FFdd00;
 }
 	</style>
 	<title>Applicants</title>
@@ -64,7 +79,7 @@
 	<div class="container-title sticky-top">
 		<h2 class="page-title"> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
 		<div>
-			<a id="logout" class="btn-apply btn btn-primary float-end">Logout</a>
+            <a id="logout" class="ms-3 btn btn-apply float-end me-0">Logout</a>
 		</div>
 	</div>
 
