--- a/src/createposition.html
+++ b/src/createposition.html
@@ -30,7 +30,7 @@
   <div class="container-title sticky-top">
     <h2 class="page-title" id="title">Create Position</h2>
     <div>
-      <a id="logout" class="btn-apply btn btn-primary float-end">Logout</a>
+      <a id="logout" class="btn btn-apply float-end">Logout</a>
     </div>
   </div>
 
@@ -117,8 +117,8 @@
                   <textarea class="form-control" style="resize: none; height: 106px;" id="notes" rows="3"></textarea>
                 </div>
               </div>
-              <input action="admin.html" type="submit" value="Create" class="btn px-5 mt-4 createbtn">
-              <a href="admin.html" class="mt-4 btn btn-back "><i class="bi bi-arrow-left"></i></a>
+              <input action="admin.html" type="submit" value="Create" class="btn px-5 mt-4 submit-btn float-end">
+              <a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
             </form>
             <!--<a href="admin.html" type="submit" class="btn btn-primary px-5 mt-4 createbtn" >Create</a>-->
 
@@ -136,7 +136,7 @@
                   </div>
                   <div class="modal-footer">
 					<button type="button" class="btn btn-primary " data-bs-dismiss="modal">Add another</button>
-                    <a href="admin.html" class="btn btn-primary ">Return to dashboard</i></a>
+                    <a href="admin.html" class="btn btn-primary">Return to dashboard</i></a>
                   </div>
                 </div>
               </div>
