fix see applicants button

--- a/src/admin.html
+++ b/src/admin.html
@@ -114,7 +114,7 @@
                         <span id="notes">None</span>
                     </div>
 
-                        <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn submit-btn">See
+                        <a id="seebutton" href="" value="" class="mt-2 btn open-position-btn submit-btn" style="height:50px; line-height:35px;">See
                             Applicants</a>
                         <div class="mt-2 open-position-input-group input-group float-end">
                             <a id="editbutton" href="" value="" class="input-group-btn btn submit-btn">Edit Notes</a>
