--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,47 @@
             </span>
         </div>
     </div>
-    <div class="p-3 card filter card-filter sticky-left">
+        <div class="p-3 card filter card-filter sticky-left">
+        <label class="filter-label">Major:</label>
+        <div class="form-check" id="test">
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="CS"
+                    value="CS" onchange="" />CS</label><br>
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="IT"
+                    value="IT" onchange="" />IT</label><br>
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="ECE"
+                    value="ECE" onchange="" />ECE</label><br>
+        </div>
+        <label class="mt-2 filter-label">Position:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position" type="checkbox"
+                    id="Grader" value="Grader"/>Grader</label><br>
+            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position" type="checkbox"
+                    id="Instructor" value="Instructor"/>Instructor</label><br>
+        </div>
+        <label class="mt-2 filter-label">Semester:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox" id="Fall"
+                    value="Fall"/>Fall</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox"
+                    id="Spring" value="Spring"/>Spring</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox"
+                    id="Summer" value="Summer"/>Summer</label><br>
+        </div>
+        <label class="mt-2 filter-label">Level:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label grad-checkboxgrad-checkbox"><input class="form-check-input level" type="checkbox" id="grad"
+                    value="grad"/>Graduate</label><br>
+            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox"
+                    id="undergrad" value="undergrad"/>Undergraduate </label><br>
+        </div>
+
+        <div class="mt-3 form-check">
+            <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
+                    name="collapserdb" onchange="collapseCards('show')" />Show</label><br>
+            <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
+                    name="collapserdb" onchange="collapseCards('hide')" checked />Collapse</label><br>
+        </div>
+    </div>
         <label class="filter-label">Major:</label>
         <div class="form-check" id="test">
             <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS"
