--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         </div>
         <label class="mt-2 filter-label">Level:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label grad-checkboxgrad-checkbox"><input class="form-check-input level" type="checkbox" id="grad"
+            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox" id="grad"
                     value="grad"/>Graduate</label><br>
             <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox"
                     id="undergrad" value="undergrad"/>Undergraduate </label><br>
