add position no longer opens new tab

--- a/src/admin.html
+++ b/src/admin.html
@@ -35,7 +35,7 @@
         </h2>
 
         <div class="add-button">
-            <a id="newbutton" href="createposition.html?new" target="_blank" id="newbutton" value=""
+            <a id="newbutton" href="createposition.html?new" id="newbutton" value=""
                 class="btn btn-apply float-end">Add Position</a>
         </div>
 
