--- a/src/createposition.html
+++ b/src/createposition.html
@@ -135,7 +135,7 @@
                     The new position was successfully created!
                   </div>
                   <div class="modal-footer">
-					<button type="button" class="btn btn-primary " data-bs-dismiss="modal">Add another</button>
+					<button type="button" class="btn btn-primary " data-bs-dismiss="modal" onclick="location.reload();">Add another</button>
                     <a href="admin.html" class="btn btn-primary">Return to dashboard</i></a>
                   </div>
                 </div>
