--- a/src/createposition.html
+++ b/src/createposition.html
@@ -117,7 +117,7 @@
                   <textarea class="form-control" style="resize: none; height: 106px;" id="notes" rows="3"></textarea>
                 </div>
               </div>
-              <input action="admin.html" type="submit" value="Create" class="btn px-5 mt-4 submit-btn float-end">
+              <input type="submit" value="Create" id="create-btn" class="btn px-5 mt-4 submit-btn float-end">
               <a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
             </form>
             <!--<a href="admin.html" type="submit" class="btn btn-primary px-5 mt-4 createbtn" >Create</a>-->
@@ -135,7 +135,7 @@
                     The new position was successfully created!
                   </div>
                   <div class="modal-footer">
-					<button type="button" class="btn btn-primary " data-bs-dismiss="modal" onclick="location.reload();">Add another</button>
+					<button type="button" class="btn btn-primary " data-bs-dismiss="modal" id="reload-button" onclick="location.reload();">Add another</button>
                     <a href="admin.html" class="btn btn-primary">Return to dashboard</i></a>
                   </div>
                 </div>
