changed localStorage to sessionStorage

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -244,15 +244,15 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="formModalLabel">Application</h5>
-                    <!--<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
                     Your form was successfully submitted!
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Go Back</button>
-                    <!--<a href="login.html" class="btn btn-primary ">Close</i></a>-->
-                    <button type="button" id="logout" class="btn btn-primary ">Logout</button>
+                    <!--<button type="button" class="btn btn-primary " data-bs-dismiss="modal">Go Back</button>
+                    <a href="login.html" class="btn btn-primary ">Close</i></a>-->
+                    <button type="button" id="logout" class="btn btn-primary">Close</button>
                   </div>
                 </div>
               </div>
