--- a/src/studentform.html
+++ b/src/studentform.html
@@ -211,9 +211,9 @@
               <div class="input-group mb-3 col">
                 <i class="input-group-text bi bi-file-earmark"></i>
 
-                <input class="form-control resumefile " type="file" id="rf">
-                <input hidden class="form-control transcriptfile" type="file" id="tf">
-                <input hidden class="form-control gtafile" type="file" id="gf">
+                <input class="form-control resumefile " type="file" id="rf" accept="application/pdf" />
+                <input hidden class="form-control transcriptfile" type="file" id="tf" accept="application/pdf" />
+                <input hidden class="form-control gtafile" type="file" id="gf" accept="application/pdf" />
 
                 <label class="input-group-text resumefile file-label label-size" for="rf">Resume</label>
                 <label hidden class="input-group-text transcriptfile file-label label-size" for="tf">Transcript</label>
