--- a/src/applicants.html
+++ b/src/applicants.html
@@ -20,43 +20,33 @@
 			background-color: whitesmoke;
 		}
 
-		.btn {
-			background-color: #0066cc;
-		}
-
-		.btn:hover {
-			background-color: #FFdd00;
-			border-color: #FFdd00;
-			color: #0066cc;
-		}
-
 		.container{
 			box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 			background-color: white;
 		}
 
 		table.dataTable {
-    clear: both;
-    margin-top: none!important; 
-    margin-bottom: 6px !important;
-    max-width: none !important;
-    /* border-collapse: separate !important; */
-    border-spacing: 0;
-}
-.btn-apply{
-  background-color: #FFdd00;
-  border-color:#FFdd00;
-  color: #044c7c;
-  margin-right: 25px;
-  width: max-content;
-  font-weight: bolder;
-}
+			clear: both;
+			margin-top: none!important; 
+			margin-bottom: 6px !important;
+			max-width: none !important;
+			/* border-collapse: separate !important; */
+			border-spacing: 0;
+		}
+		.btn-apply{
+			background-color: #FFdd00;
+			border-color:#FFdd00;
+			color: #044c7c;
+			margin-right: 25px;
+			width: max-content;
+			font-weight: bolder;
+		}
 
-.btn-apply:hover{
-  background-color: #044c7c;
-  color: #FFdd00;
-  box-shadow: 3px 3px 3px #FFdd00;
-}
+		.btn-apply:hover{
+			background-color: #044c7c;
+			color: #FFdd00;
+			box-shadow: 3px 3px 3px #FFdd00;
+		}
 	</style>
 	<title>Applicants</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -99,7 +89,7 @@
         </div>
     </div>
 
-	<div class="container applicantspage my-5" style="width:80%">
+	<div class="applicant-container container applicantspage my-5" style="width:80%">
 		<table class="table table-striped display nowrap" id="sortTable" style="width:100%">
 			<thead>
 				<tr>
@@ -123,9 +113,9 @@
 					<td>Major</td>
 					<td>GPA</td>
 					<td>Hours</td>
-					<td><div id="0123456789ABCDEF0123gpa"><select class="gtaselect btn btn-primary form-select" student="0123456789ABCDEF0123"><option value="0" id="0123456789ABCDEF0123">Not Available</option><option value="1" id="0123456789ABCDEF0123">Pending</option><option value="2" id="0123456789ABCDEF0123">Certified</option></select></div></td>
-					<td><div id="0123456789ABCDEF0123doc"><select id="pdfbtn" class="btn btn-primary" student="0123456789ABCDEF0123"><option value="documents" disabled="true" hidden="true" selected="true">Documents</option><option value="resume">Resume</option><option value="transcript">Transcript</option><option value="gta">GTA</option></select></div></td>
-					<td><button type="button" class="btn btn-primary remove" value="0123456789ABCDEF0123">X</button></td>
+					<td><div id="0123456789ABCDEF0123gpa"><select class="gtaselect btn btn-primary applicant-table-btn" student="0123456789ABCDEF0123"><option value="0" id="0123456789ABCDEF0123">Not Available</option><option value="1" id="0123456789ABCDEF0123">Pending</option><option value="2" id="0123456789ABCDEF0123">Certified</option></select></div></td>
+					<td><div id="0123456789ABCDEF0123doc"><select id="pdfbtn" class="btn btn-primary applicant-table-btn" student="0123456789ABCDEF0123"><option value="documents" disabled="true" hidden="true" selected="true">Documents</option><option value="resume">Resume</option><option value="transcript">Transcript</option><option value="gta">GTA</option></select></div></td>
+					<td><button type="button" class="btn btn-danger remove applicant-table-btn" value="0123456789ABCDEF0123"><i class="bi bi-trash"></i></button></td>
 				</tr>-->
 			<tbody>
 				
