--- a/src/applicants.html
+++ b/src/applicants.html
@@ -159,7 +159,7 @@
 					<!--<iframe src="files/transcript.pdf" width="100%" height="580" frameborder="0" ></iframe>-->
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 			<!-- /.modal-content -->
