--- a/src/createposition.html
+++ b/src/createposition.html
@@ -135,8 +135,8 @@
                     The new position was successfully created!
                   </div>
                   <div class="modal-footer">
-					<button type="button" class="btn btn-primary " data-bs-dismiss="modal" id="reload-button" onclick="location.reload();">Add another</button>
-                    <a href="admin.html" class="btn btn-primary">Return to dashboard</i></a>
+					<button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="reload-button" onclick="location.reload();">Add another</button>
+                    <button type ="button" a href="admin.html" class="btn btn-primary">Return to dashboard</i></a></button>
                   </div>
                 </div>
               </div>
