--- a/src/createposition.html
+++ b/src/createposition.html
@@ -136,7 +136,7 @@
                   </div>
                   <div class="modal-footer">
 					<button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="reload-button" onclick="location.reload();">Add another</button>
-                    <button type ="button" a href="admin.html" class="btn btn-primary">Return to dashboard</i></a></button>
+                    <button type ="button"> <a href="admin.html" class="btn btn-primary">Return to dashboard</button></a>
                   </div>
                 </div>
               </div>
