--- a/src/studentform.html
+++ b/src/studentform.html
@@ -154,7 +154,7 @@
                     Please select the term you are applying for.
                   </div>
                 </div>
-              </div>
+              </div><br>
 
               <div id="gta" class="col" hidden>
                 <label class="form-label" for="GTA">Are you GTA certified or have a previous degree from a US institute
