--- a/src/admin.html
+++ b/src/admin.html
@@ -20,7 +20,6 @@
     <script src="script/admin/adminfilter.js"></script>
     <script src="script/admin/adminwrite.js"></script>
     <script type="module" src="script/admin/admindatabase.js"></script>
-    <script src="script/redirect.js"></script>
     <title>Dashboard</title>
 </head>
 
@@ -103,9 +102,9 @@
 
     <div class="row open-position-container" id="open-position-container">
         <div class="col-sm-4" id="sample">
-            <div class="card mb-3 target class-card" id="card">
+            <div class="card mb-3 class-card" id="card">
                 <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-                    <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
+                    <h5 class="card-header target"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
                             class="float-end right-card-title" id="applicants">0 Applicants</span></h5>
                 </a>
                 <div class="card-body collapse" id="collapseOne">
