--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,9 @@
     </div>
     <div class="row open-position-container" id="open-position-container">
         <div class="col-sm-3" id="sample">
-            <div class="card mb-3 target class-card" id="card">
+            <div class="card mb-3 class-card" id="card">
                 <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-                    <h5 class="card-header"><span id="classname">IT 390</span><span class="semester">(<span
+                    <h5 class="card-header target"><span id="classname">IT 390</span><span class="semester">(<span
                                 id="semester">Summer</span>)</span></h5>
                 </a>
                 <div class="card-body collapse" id="collapseOne">
