--- a/src/studentform.html
+++ b/src/studentform.html
@@ -200,10 +200,10 @@
               <div>
                 <fieldset class="field_set">
                   <legend id="courseslegend">Courses (choose of up to 5):</legend>
-                  <div id="graderlist" class="control-group radio-container">
+                  <div id="graderlist" class="control-group checkbox-container">
                   </div>
 
-                  <div id="lablist" class="control-group radio-container" hidden>
+                  <div id="lablist" class="control-group checkbox-container" hidden>
                   </div>
 
                   <div id="lablistna" class="control-group" hidden>
