--- a/src/studentform.html
+++ b/src/studentform.html
@@ -139,14 +139,14 @@
                 <div class="col">		  
                   <label class="form-label" for="level">Current Level:</label><br>
 					<div class="radio-container">
-						<input class="form-check-input level" type="radio" required id="BS" name="level" value="0">
-						<label class="form-check-label check-level" for="BS" id="BSlabel">BS</label>
+						<input class="level" type="radio" required id="BS" name="level" value="0">
+						<label class="check-level" for="BS" id="BSlabel">BS</label>
 
-						<input class="form-check-input level" type="radio" required id="MS" name="level" value="1">
-						<label class="form-check-label check-level" for="MS">MS</label>
+						<input class="level" type="radio" required id="MS" name="level" value="1">
+						<label class="check-level" for="MS">MS</label>
 	
-						<input class="form-check-input level" type="radio" required id="PhD" name="level" value="2">
-						<label class="form-check-label check-level" for="PhD">PhD</label>
+						<input class="level" type="radio" required id="PhD" name="level" value="2">
+						<label class="check-level" for="PhD">PhD</label>
                     <div class="invalid-feedback">
                       Please select your current level.
                     </div>
