--- a/src/studentform.html
+++ b/src/studentform.html
@@ -21,7 +21,7 @@
   <script src="script/studentform/formwrite.js"></script>
   <script src="script/studentform/formsubmit.js"></script>
   <script type="module" src="script/studentform/formdatabase.js"></script>
-  <!--<script src="script/redirect.js"></script>-->
+  <script src="script/redirect.js"></script>
   <title>Application</title>
 </head>
 
