--- a/src/studentform.html
+++ b/src/studentform.html
@@ -200,10 +200,10 @@
               <div>
                 <fieldset class="field_set">
                   <legend id="courseslegend">Courses (choose of up to 5):</legend>
-                  <div id="graderlist" class="control-group">
-                  </div>
+                  <div id="graderlist" class="control-group course-form-control">
+				  </div>
 
-                  <div id="lablist" class="control-group" hidden>
+                  <div id="lablist" class="control-group course-form-control" hidden>
                   </div>
 
                   <div id="lablistna" class="control-group" hidden>
