--- a/src/studentform.html
+++ b/src/studentform.html
@@ -172,21 +172,21 @@
                 </div>
               </div><br>
 
-              <div id="gta" class="col" hidden>
+              <div id="gta" class="col">
                 <label class="form-label" for="GTA">Are you GTA certified or have a previous degree from a US institute
                   (as this waives GTA certification)?</label>
                 <div class="radio-container">
-                  <input class="form-check-input gtainput" type="radio" required id="yes" name="GTA" value="0"
+                  <input class="gtainput" type="radio" required id="yes" name="GTA" value="0"
                     onclick="updateGTA(this.value)">
-                  <label class="form-check-label me-4" for="yes" id="BSlabel">Yes</label>
+                  <label class="me-4" for="yes" id="BSlabel">Yes</label>
 
                   <input class="form-check-input gtainput" type="radio" required id="no" name="GTA" value="1"
                     onclick="updateGTA(this.value)">
-                  <label class="form-check-label me-4" for="no">No</label> <br>
+                  <label class="me-4" for="no">No</label> <br>
 
-                  <input class="form-check-input gtainput" type="radio" required id="nolab" name="GTA" value="3"
+                  <input class="gtainput" type="radio" required id="nolab" name="GTA" value="3"
                     onclick="updateGTA(this.value)">
-                  <label class="form-check-label me-4" for="nolab">Not interested in being an Instructor</label>
+                  <label class="me-4" for="nolab">Not interested in being an Instructor</label>
 
                   <input type="radio" required id="null" value="3" name="GTA" hidden>
                   <input type="radio" required id="onrecord" value="2" name="GTA" hidden>
