--- a/src/studentform.html
+++ b/src/studentform.html
@@ -154,6 +154,7 @@
                 </div>
               </div>
 
+			<div class="row mb-3">
               <div class="col">
                 <label class="form-label" for="applyterm">What term you are applying for?</label><br>
                 <div class="radio-container">
@@ -171,11 +172,14 @@
                   Please select the term you are applying for.
                 </div>
               </div><br>
-
+			   <div class="col">
+			   </div>
+			  </div>
+			  
               <div id="gta" class="col">
                 <label class="form-label" for="GTA">Are you GTA certified or have a previous degree from a US institute
                   (as this waives GTA certification)?</label>
-                <div class="radio-container">
+                <div class="radio-container GTA-div">
                   <input class="gtainput" type="radio" required id="yes" name="GTA" value="0"
                     onclick="updateGTA(this.value)">
                   <label class="me-4" for="yes" id="BSlabel">Yes</label>
