--- a/src/createposition.html
+++ b/src/createposition.html
@@ -118,7 +118,7 @@
 
                 <div class="col">
                   <label for="notes">Notes:</label>
-                  <textarea class="form-control" style="resize: none; height: 106px;" id="notes" rows="3"></textarea>
+                  <textarea class="form-control create-textarea" id="notes" rows="3"></textarea>
                 </div>
               </div>
               <input type="submit" value="Create" id="create-btn" class="btn px-5 mt-4 submit-btn float-end">
