fixed file size

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -208,7 +208,7 @@
               <p id="uploadtext">You may attach your updated resume and transcript</p> <small class="text-muted">You can
                 upload multiple documents using the dropdown arrow</small>
 
-              <div class="input-group mb-3 col">
+              <div class="input-group mb-3 col file-input-group">
                 <i class="input-group-text bi bi-file-earmark"></i>
 
                 <input class="form-control resumefile " type="file" id="rf" accept="application/pdf, image/png, image/jpeg" />
