fix course invalid-feedback

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -198,10 +198,9 @@
                         here</a> to learn more about GTA certification process.</p>
                   </div>
 
-                  <div id="courseinput" class="input-group is-invalid">
+                  <div id="courseinput" class="input-group is-valid">
                   </div>
-                  <div class="invalid-feedback" id="submiterror" hidden>
-                  </div>
+                  <div class="invalid-feedback">You must check at least one course.</div>
                 </fieldset>
               </div>
 
