--- a/src/studentform.html
+++ b/src/studentform.html
@@ -198,7 +198,7 @@
                         here</a> to learn more about GTA certification process.</p>
                   </div>
 
-                  <div id="courseinput" class="input-group is-valid">
+                  <div id="courseinput" class="input-group is-course-valid">
                   </div>
                   <div class="invalid-feedback">You must check at least one course.</div>
                 </fieldset>
