--- a/src/studentform.html
+++ b/src/studentform.html
@@ -185,7 +185,7 @@
 
                   <input class="gtainput" type="radio" required id="nolab" name="GTA" value="3"
                     onclick="updateGTA(this.value)">
-                  <label for="nolab">Not interested in being an Instructor</label>
+                  <label for="nolab" class="nolab">Not interested in being an Instructor</label>
 
                   <input type="radio" required id="null" value="3" name="GTA" hidden>
                   <input type="radio" required id="onrecord" value="2" name="GTA" hidden>
