phone screen friendly

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -183,7 +183,7 @@
                 </fieldset>
               </div>
 
-              <p id="uploadtext">You may attach your updated resume and transcript</p> <small class="text-muted">You can upload multiple documents using the dropdown arrow</small>
+              <p id="uploadtext">You may attach your updated resume and transcript</p> <small class="text-muted">You can upload multiple documents using the dropdown arrow</small><br>
 
               <div class="input-group mb-3 col file-input-group">
                 <i class="input-group-text bi bi-file-earmark"></i>
