--- a/src/studentform.html
+++ b/src/studentform.html
@@ -212,7 +212,7 @@
                   You must upload proof of GTA certification or a waiver.
                 </div>
               </div>
-              <input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
+              <br><input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
             </form>
             <!-- Message Form was submitted successfully-->
             <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
