--- a/src/createposition.html
+++ b/src/createposition.html
@@ -45,7 +45,7 @@
                 <div class="col">
                   <label for="class">Class: </label>
                   <div style="width:100%;" class="input-group " id="class">
-                    <select style="max-width:25%;" id="CourseType" class="dropdown dropdown-toggle form-control"
+                    <select style="max-width:25%;" id="CourseType" class="dropdown dropdown-toggle form-select"
                       required>
                       <ul class="dropdown-menu">
                         <option selected disabled value=''>Choose...</option>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col">
                   <label for="position">Position: </label>
-                  <select id="position" class="dropdown dropdown-toggle form-control" required>
+                  <select id="position" class="dropdown dropdown-toggle form-select" required>
                     <ul class="dropdown-menu">
                       <option selected disabled value=''>Choose Position...</option>
                       <option value="G">Grader</option>
@@ -82,7 +82,7 @@
                 <div class="col">
                   <div class="col">
                     <label for="level">Level:</label>
-                    <select id="level" class="dropdown dropdown-toggle form-control"
+                    <select id="level" class="dropdown dropdown-toggle form-select"
                       onchange="changePattern(this.value)" required>
                       <ul class="dropdown-menu">
                         <option selected disabled value=''>Choose Level...</option>
