--- a/src/createposition.html
+++ b/src/createposition.html
@@ -4,15 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--Link added for bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/css.css">
   <link rel="icon" href="assets/umkc-logo.png">
-  <!--Script added for bootstrap-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script/position/positionprocess.js"></script>
   <script src="script/position/positionsubmit.js"></script>
@@ -39,14 +34,12 @@
       <div class="col-lg-11-auto">
         <div class="card my-5 card-new-position">
           <div class="card-body cardbody-color p-lg-5 new-position-card">
-
             <form id="courseform" class="needs-validation" action="javascript:modal()" novalidate>
               <div class="row">
                 <div class="col">
                   <label for="class">Class: </label>
                   <div style="width:100%;" class="input-group " id="class">
-                    <select style="max-width:25%;" id="CourseType" class="dropdown dropdown-toggle form-select"
-                      required>
+                    <select style="max-width:25%;" id="CourseType" class="dropdown dropdown-toggle form-select" required>
                       <ul class="dropdown-menu">
                         <option selected disabled value=''>Choose...</option>
                         <option value="CS">CS</option>
@@ -69,7 +62,6 @@
                       <option selected disabled value=''>Choose Position...</option>
                       <option value="G">Grader</option>
                       <option value="R">Lab Instructor</option>
-                      <!--<option value="Both">Both</option>-->
                     </ul>
                   </select>
                   <div class="invalid-feedback">
@@ -77,7 +69,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="row mt-3">
                 <div class="col">
                   <div class="col">
@@ -94,7 +85,6 @@
                     <div class="invalid-feedback">
                       Please choose a level.
                     </div>
-
                     <div class="col mt-3">
                       <label for="semester">Semester:</label>
                       <div class="checkbox-group required">
@@ -111,7 +101,6 @@
                     </div>
                   </div>
                 </div>
-
                 <div class="col">
                   <label for="notes">Notes:</label>
                   <textarea class="form-control" style="resize: none; height: 106px;" id="notes" rows="3"></textarea>
@@ -120,8 +109,6 @@
               <input type="submit" value="Create" id="create-btn" class="btn px-5 mt-4 submit-btn float-end">
               <a href="admin.html" class="mt-4 btn btn-back submit-btn "><i class="bi bi-arrow-left float-start"></i></a>
             </form>
-            <!--<a href="admin.html" type="submit" class="btn btn-primary px-5 mt-4 createbtn" >Create</a>-->
-
             <!-- Message Form was submitted successfully-->
             <div class="modal fade" id="positionModal" tabindex="-1" aria-labelledby="positionModalLabel"
               aria-hidden="true">
@@ -129,19 +116,17 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="positionModalLabel">New Position</h5>
-                    <!--<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
                   </div>
                   <div class="modal-body" id="position-modal-body">
                     The new position was successfully created!
                   </div>
                   <div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="reload-button" onclick="location.reload();">Add another</button>
+				          	<button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="reload-button" onclick="location.reload();">Add another</button>
                     <button type = "button" class="btn btn-primary" onClick="location.href='admin.html'">Return to dashboard</button>
                   </div>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
@@ -151,10 +136,8 @@
   <script>
     (function () {
       'use strict'
-
       // Fetch all the forms we want to apply custom Bootstrap validation styles to
       var forms = document.querySelectorAll('.needs-validation')
-
       // Loop over them and prevent submission
       Array.prototype.slice.call(forms)
         .forEach(function (form) {
@@ -163,11 +146,11 @@
               event.preventDefault()
               event.stopPropagation()
             }
-
             form.classList.add('was-validated')
           }, false)
         })
     })()
   </script>
 </body>
+
 </html>
