edit admin modal

--- a/src/admin.html
+++ b/src/admin.html
@@ -117,15 +117,15 @@
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
-			<h5 class="modal-title" id="adminModalLabel">Application</h5>
+			<h5 class="modal-title" id="adminModalLabel">Remove <span class="courseremove"></span></h5>
 			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
-			Your form was successfully submitted!
+			Are you sure you want to remove<span class="courseremove"></span>! 
 		  </div>
 		  <div class="modal-footer">
-			<button type="button" class="btn btn-success ok">Yes</button>
-			<button type="button" class="btn btn-default cancel">No</button>
+			<button type="button" class="btn input-group-btn ok">Yes Remove</button>
+			<button type="button" class="btn input-group-btn cancel">No Keep</button>
 		  </div>
 		</div>
 	  </div>
