remove admin cards

--- a/src/admin.html
+++ b/src/admin.html
@@ -117,11 +117,11 @@
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
-			<h5 class="modal-title" id="adminModalLabel">Remove <span class="courseremove"></span></h5>
+			<h5 class="modal-title" id="adminModalLabel">Remove <span id="course-remove-title"></span></h5>
 			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		  </div>
 		  <div class="modal-body">
-			Are you sure you want to remove<span class="courseremove"></span>! 
+			Are you sure you want to remove<span id="course-remove-body"></span>! 
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="btn input-group-btn ok">Yes Remove</button>
