--- a/src/admin.html
+++ b/src/admin.html
@@ -124,8 +124,8 @@
 			Are you sure you want to remove<span id="course-remove-body"></span>! 
 		  </div>
 		  <div class="modal-footer">
-			<button type="button" class="btn input-group-btn ok">Yes Remove</button>
-			<button type="button" class="btn input-group-btn cancel">No Keep</button>
+			<button type="button" class="input-group-btn btn submit-btn ok">Yes<br>Remove</button>
+			<button type="button" class="input-group-btn btn submit-btn cancel">No<br>Keep</button>
 		  </div>
 		</div>
 	  </div>
