--- a/src/admin.html
+++ b/src/admin.html
@@ -125,7 +125,7 @@
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="input-group-btn btn submit-btn ok">Yes<br>Remove</button>
-			<button type="button" class="input-group-btn btn submit-btn cancel">No<br>Keep</button>
+			<button type="button" class="input-group-btn btn submit-btn cancel" data-bs-dismiss="modal" aria-label="Close">No<br>Keep</button>
 		  </div>
 		</div>
 	  </div>
